--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "api_learning",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://api.codebazan.ir",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
