--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "alertifyjs": "^1.13.1",
     "axios": "^0.21.1",
     "chart.js": "^3.3.2",
     "cors": "^2.8.5",
